@@ -1,5 +1,5 @@
 dnl
-dnl $Id: config.m4,v 1.9 2001/11/30 18:59:59 sniper Exp $
+dnl $Id: config.m4,v 1.10 2001/11/30 22:12:31 camber Exp $
 dnl
 
 PHP_ARG_WITH(sybase-ct, for Sybase-CT support,
@@ -26,21 +26,26 @@ if test "$PHP_SYBASE_CT" != "no"; then
   fi
   
   PHP_ADD_LIBPATH($SYBASE_CT_LIBDIR, SYBASE_CT_SHARED_LIBADD)
-  PHP_ADD_LIBRARY(cs,, SYBASE_CT_SHARED_LIBADD)
-  PHP_ADD_LIBRARY(ct,, SYBASE_CT_SHARED_LIBADD)
-  PHP_ADD_LIBRARY(comn,, SYBASE_CT_SHARED_LIBADD)
-  PHP_ADD_LIBRARY(intl,, SYBASE_CT_SHARED_LIBADD)
-
-  SYBASE_CT_LIBS="-L$SYBASE_CT_LIBDIR -lcs -lct -lcomn -lintl"
-
-  PHP_CHECK_LIBRARY(tcl, netg_errstr, [
-    PHP_ADD_LIBRARY(tcl,,SYBASE_CT_SHARED_LIBADD)
-  ],[ 
-    PHP_ADD_LIBRARY(sybtcl,,SYBASE_CT_SHARED_LIBADD)
-  ],[ 
-    $SYBASE_CT_LIBS 
-  ])
-
-  PHP_CHECK_LIBRARY(insck, insck__getVdate, [PHP_ADD_LIBRARY(insck,, SYBASE_CT_SHARED_LIBADD)],[],[-L$SYBASE_CT_LIBDIR])
-  PHP_CHECK_LIBRARY(insck, bsd_tcp,         [PHP_ADD_LIBRARY(insck,, SYBASE_CT_SHARED_LIBADD)],[],[-L$SYBASE_CT_LIBDIR])
+  if test -f $SYBASE_CT_INCDIR/tds.h; then
+    PHP_ADD_LIBRARY(ct,, SYBASE_CT_SHARED_LIBADD)
+    SYBASE_CT_LIBS="-L$SYBASE_CT_LIBDIR -lct"
+  else
+    PHP_ADD_LIBRARY(cs,, SYBASE_CT_SHARED_LIBADD)
+    PHP_ADD_LIBRARY(ct,, SYBASE_CT_SHARED_LIBADD)
+    PHP_ADD_LIBRARY(comn,, SYBASE_CT_SHARED_LIBADD)
+    PHP_ADD_LIBRARY(intl,, SYBASE_CT_SHARED_LIBADD)
+  
+    SYBASE_CT_LIBS="-L$SYBASE_CT_LIBDIR -lcs -lct -lcomn -lintl"
+  
+    PHP_CHECK_LIBRARY(tcl, netg_errstr, [
+      PHP_ADD_LIBRARY(tcl,,SYBASE_CT_SHARED_LIBADD)
+    ],[ 
+      PHP_ADD_LIBRARY(sybtcl,,SYBASE_CT_SHARED_LIBADD)
+    ],[ 
+      $SYBASE_CT_LIBS 
+    ])
+  
+    PHP_CHECK_LIBRARY(insck, insck__getVdate, [PHP_ADD_LIBRARY(insck,, SYBASE_CT_SHARED_LIBADD)],[],[-L$SYBASE_CT_LIBDIR])
+    PHP_CHECK_LIBRARY(insck, bsd_tcp,         [PHP_ADD_LIBRARY(insck,, SYBASE_CT_SHARED_LIBADD)],[],[-L$SYBASE_CT_LIBDIR])
+  fi
 fi
